HelloUltraviolet/Fixtures/RejectedSource/Expressions/AddressOfIndexTyping/Expected.uv
//! Expected diagnostic metadata for the AddressOfIndexTyping rejected-source specimen.

expectedDiagnostic("E-TYP-1812", "rule.16.T-AddrOf")
